# connect-core

./: .gitignore  AUTHELIA_FAQ.ca.md  AUTHELIA_FAQ.en.md  AUTHELIA_FAQ.md  AUTHELIA_FAQ.zh-cn.md  AUTHELIA_README.ca.md  AUTHELIA_README.en.md  AUTHELIA_README.md  AUTHELIA_README.zh-cn.md  CONTRIBUTING.ca.md  CONTRIBUTING.en.md  CONTRIBUTING.md  CONTRIBUTING.zh-cn.md  DESIGN_TRUTH_CONTRACT.ca.md  DESIGN_TRUTH_CONTRACT.en.md  DESIGN_TRUTH_CONTRACT.md  DESIGN_TRUTH_CONTRACT.zh-cn.md  DESIGN_TRUTH_FRAMEWORK.ca.md  DESIGN_TRUTH_FRAMEWORK.en.md  DESIGN_TRUTH_FRAMEWORK.md  DESIGN_TRUTH_FRAMEWORK.zh-cn.md  DISASTER_RECOVERY.ca.md  DISASTER_RECOVERY.en.md  DISASTER_RECOVERY.md  DISASTER_RECOVERY.zh-cn.md  Dockerfile.comfyui  Dockerfile.forgejo-mcp  Dockerfile.kokoro-blackwell  Dockerfile.languagetool  Dockerfile.libretranslate  Dockerfile.matrix  Dockerfile.ollama  Dockerfile.qdrant  Dockerfile.runners  Dockerfile.whisper-blackwell-nonroot  ENV_MANAGEMENT.ca.md  ENV_MANAGEMENT.en.md  ENV_MANAGEMENT.md  ENV_MANAGEMENT.zh-cn.md  LICENSE.ca.md  (+36 more)
.github/: copilot-instructions.ca.md  copilot-instructions.en.md  copilot-instructions.md  copilot-instructions.zh-cn.md
agents/: README.ca.md  README.en.md  README.md  README.zh-cn.md  __init__.py  agent_router.py  auto_scaler.py  chain_of_thought_agent.py  distributed_cache.py  external_api_integration.py  few_shot_prompter.py  iteration_manager.py  iterative_agent.py  (+15 more)
mcp-server/: README.ca.md  README.en.md  README.md  README.zh-cn.md  cognito_mcp_server.py  pyproject.toml
mcp-server/tests/: test_mcp_server.py  test_tools.py
(+349 files in other folders)
