[project]
name = "cognito-mcp-server"
version = "0.1.0"
dependencies = [
    "mcp[cli]>=1.2.0",
    "httpx>=0.27.0",
    "qdrant-client>=1.7.0",
    "pydantic>=2.0.0",
    "python-dotenv",
    "aiohttp>=3.9.0"
]

[project.optional-dependencies]
dev = [
    "pytest>=8.0.0",
    "pytest-asyncio>=0.23.0",
    "playwright>=1.40.0",
    "jupyter>=1.0.0",
    "ipykernel>=6.29.0",
]
